plugins {
    id 'net.minecraftforge.gradle' version '6.0.24'
    id 'eclipse'
    id 'maven-publish'
}

group = 'net.torocraft'
version = '1.19.2-1.0.0'
archivesBaseName = 'dailies'

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

minecraft {
    mappings channel: 'official', version: '1.19.2'
    runs {
        client {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            mods {
                dailies {
                    source sourceSets.main
                }
            }
        }
        server {
            workingDirectory project.file('run')
            mods {
                dailies {
                    source sourceSets.main
                }
            }
        }
    }
}

repositories {
    mavenCentral()
    maven { url = 'https://maven.minecraftforge.net/' }
}

dependencies {
    minecraft 'net.minecraftforge:forge:1.19.2-43.2.21'
}

// Example for how to get properties into the manifest for reading by the runtime..
// jar {
//     manifest {
//         attributes([
//             "Specification-Title": "examplemod",
//             "Specification-Vendor": "examplemodsareus",
//             "Specification-Version": "1", // We are version 1 of ourselves
//             "Implementation-Title": project.name,
//             "Implementation-Version": "${version}",
//             "Implementation-Vendor" :"examplemodsareus",
//             "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
//         ])
//     }
// }

// Example configuration to allow publishing using the maven-publish task
// This is the preferred method to reobfuscate your jar file
jar.finalizedBy('reobfJar')
// However if you are in a multi-project build, dev time needs unobfed jar files, so you can delay the obfuscation until publishing by doing
//publish.dependsOn('reobfJar')

publishing {
    publications {
        mavenJava(MavenPublication) {
            artifact jar
        }
    }
    repositories {
        maven {
            url "file:///${project.projectDir}/mcmodsrepo"
        }
    }
}

//sourceSets { main { output.resourcesDir = output.classesDir } }